# smartcard

./: Cargo.toml  Makefile
src/: atr.rs  check.rs  historical.rs  init.rs  lib.rs  main.rs  piv_card.rs
