[package]
name = "card"
version = "0.1.0"
edition = "2021"

[lib]
name = "card"
path = "src/lib.rs"

[dependencies]
clap = {version = "4.5.8", features = ["derive"]}
des = "0.8.1"
omnom = "3.0.0"
pcsc = "2.8.2"
tlv_parser = "0.9.0"
yasna = "0.5.2"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]
